# Fruit-Classification-MLOps

./: Dockerfile  Makefile  README.md  pyproject.toml
.dvc/: config
docs/src/: app.md  config.md  index.md  main.md  process.md  run_notebook.md  train_model.md
processors/: scaler.pkl
src/: app.py  config.py  main.py  process.py  train_model.py
