[tool.poetry]
name = "Flaschenpost"
version = "0.1.0"
description = ""
authors = ["Asmir Muminovic"]

[tool.poetry.dependencies]
python = "^3.8"
pdoc3 = "^0.10.0"
notebook = "^6.4.10"
prefect = "^2.7.6"
scikit-learn = "^1.2.0"
pandas = "^1.5.2"
prefect-jupyter = "^0.2.0"
interrogate = "^1.5.0"
joblib = "^1.2.0"
pandera = "^0.14.5"
pydantic = "^1.10.6"
dvc = "^2.51.0"
hydra-core = "^1.3.2"
wandb = "^0.14.0"
kaggle = "^1.5.13"
jupytext = "^1.14.5"
opendatasets = "^0.1.22"
opencv-python = "^4.7.0.72"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"


[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pre-commit = "^2.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
	\.git
| \.hg
| \.mypy_cache
| \.tox
| \.venv
| _build
| buck-out
| build   
)/ 
'''
